--- a/index.html
+++ b/index.html
@@ -41,6 +41,26 @@
         </div>
       </div>
     </div>
-    <div class="sidebar"></div>
+    <div class="sidebar">
+      <i class="left-menu-icon fa-solid fa-magnifying-glass"></i>
+      <i class="left-menu-icon fa-solid fa-house"></i>
+      <i class="left-menu-icon fa-solid fa-user"></i>
+      <i class="left-menu-icon fa-solid fa-bookmark"></i>
+      <i class="left-menu-icon fa-solid fa-tv"></i>
+      <i class="left-menu-icon fa-solid fa-hourglass"></i>
+      <i class="left-menu-icon fa-solid fa-cart-shopping"></i>
+    </div>
+    <div class="container">
+      <div class="content-container">
+        <div class="featured-content">
+          <img class="featured-title" src="" alt="">
+          <p class="featured-desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
+            voluptatem nihil quas eaque eveniet? Recusandae!
+          </p>
+          <button class="featured-button">WATCH</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
