add more sections

--- a/index.html
+++ b/index.html
@@ -163,6 +163,210 @@
           <i class="fa-solid fa-angle-right arrow"></i>
         </div>
       </div>
+      <div class="movie-list-container">
+        <h1 class="movie-list-title">Chinese Movies & TV</h1>
+        <div class="movie-list-wrapper">
+          <div class="movie-list">
+            <div class="movie-list-item">
+              <img
+                class="boxart-image boxart-image-in-padded-container movie-list-item-img"
+                src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABZdfo7i86UdhpYCVPKXqbAbcdGzAJL7BQIw4InDL_6N42Vp6fKVgDbTXLQ4L5Xr6lBo7M1tVVZY5S_FxYQII3HcHlLs4dweYhzo.webp?r=ea5"
+                alt=""
+              />
+              <span class="movie-list-item-title">Word of Honor</span>
+              <p class="movie-list-item-desc">
+                A didillusioned leader of assassins sets out for the martial
+                arts world, where he encounters a bosom friend and becomes
+                entangled in a conspiracy.
+              </p>
+              <button class="movie-list-item-button">Watch</button>
+            </div>
+          </div>
+          <div class="movie-list">
+            <div class="movie-list-item">
+              <img
+                class="boxart-image boxart-image-in-padded-container movie-list-item-img"
+                src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABVtawEeKyeenDb54a9gxKBBFzbwwbNQcHZrZxL7uEI9BE2_lySUKBZ0Pz6-bLoBBTVlIXrtCa37LT99bEEI6ZiEYBGVdBtYWRLQ.webp?r=14d"
+                alt=""
+              />
+              <span class="movie-list-item-title">The Untamed</span>
+              <p class="movie-list-item-desc">
+                In a magical world of inter-clan rivality, two soulmates face
+                treacherous schemes and uncover a dark mystery linked to a
+                tragic event in the past.
+              </p>
+              <button class="movie-list-item-button">Watch</button>
+            </div>
+          </div>
+          <div class="movie-list">
+            <div class="movie-list-item">
+              <img
+                class="boxart-image boxart-image-in-padded-container movie-list-item-img"
+                src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABeeWhpRs_DQ63ZjrGdzmid_c-TipsBmAYsK7fnzczED1LIIJdBTb7gW4SLWH8A9pVRUa1k7BNKT2m2eAo_xcA2YmLLnsChu4p2Y.webp?r=372"
+                alt=""
+              />
+              <span class="movie-list-item-title">Love Between</span>
+              <p class="movie-list-item-desc">
+                When a low-ranked fairy accidentally resurrects a powerful
+                demon, their fates become cosmically entangled as the world is
+                thrown into turmoil.
+              </p>
+              <button class="movie-list-item-button">Watch</button>
+            </div>
+          </div>
+          <div class="movie-list">
+            <div class="movie-list-item">
+              <img
+                class="boxart-image boxart-image-in-padded-container movie-list-item-img"
+                src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABWt6tIXNridbNjlH1lUTwJxFDVkTWRQMc33ssSeTd8CdzXyDf8ujsS2dzrEtxqQVPvrsEqxUYzkopcDBxr_2ytHHuSdXIGFitwA.webp?r=76e"
+                alt=""
+              />
+              <span class="movie-list-item-title">Ashes of Love</span>
+              <p class="movie-list-item-desc">
+                Hidden away by her mother, the Floral Goddess, the naive Jinmi
+                is drawn to Xufeng, the Heavently Emperor`s son. Yet forces
+                conspire against them.
+              </p>
+              <button class="movie-list-item-button">Watch</button>
+            </div>
+          </div>
+          <div class="movie-list">
+            <div class="movie-list-item">
+              <img
+                class="boxart-image boxart-image-in-padded-container movie-list-item-img"
+                src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABQJ3Ezsb6bqvibrun94SkilLPsqrh5dIHHlD-xh2r9qMJSDnEGNiOAWmVzsw-vVi60yphj3TIMF94AsjJ0RP1sbjlUEYlr0Ax3o.webp?r=318"
+                alt=""
+              />
+              <span class="movie-list-item-title">Legend of Exorcism</span>
+              <p class="movie-list-item-desc">
+                After leaving Yaojin Palace, Kong Hongjun arrives in Chang`an to
+                battle demons and forms a bond with exorcism squad chief Li
+                Jinglong.
+              </p>
+              <button class="movie-list-item-button">Watch</button>
+            </div>
+          </div>
+          <div class="movie-list">
+            <div class="movie-list-item">
+              <img
+                class="boxart-image boxart-image-in-padded-container movie-list-item-img"
+                src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABcx_0e3107jMd7-3t53slF0F35-Cy6SiPkL_oM3I81DpCoIoWkwxuWfpTcWUTjJNLKcoU7Cc7sXmGPu2Qdakql5u50TXsMJ7VfsxjpSFea0dHBnuNbc98d5-chsy4ZHHGQ1m.jpg?r=0cf"
+                alt=""
+              />
+              <span class="movie-list-item-title">Prince of Tennis</span>
+              <p class="movie-list-item-desc">
+                Atennis whiz beats the odds to excel on the court while juggling
+                school and inspiring teammates.Based on the hit manga series by
+                Takeshi Konomi.
+              </p>
+              <button class="movie-list-item-button">Watch</button>
+            </div>
+          </div>
+          <i class="fa-solid fa-angle-right arrow"></i>
+        </div>
+      </div>
+      <div class="movie-list-container">
+        <h1 class="movie-list-title">Chinese Movies & TV</h1>
+        <div class="movie-list-wrapper">
+          <div class="movie-list">
+            <div class="movie-list-item">
+              <img
+                class="boxart-image boxart-image-in-padded-container movie-list-item-img"
+                src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABZdfo7i86UdhpYCVPKXqbAbcdGzAJL7BQIw4InDL_6N42Vp6fKVgDbTXLQ4L5Xr6lBo7M1tVVZY5S_FxYQII3HcHlLs4dweYhzo.webp?r=ea5"
+                alt=""
+              />
+              <span class="movie-list-item-title">Word of Honor</span>
+              <p class="movie-list-item-desc">
+                A didillusioned leader of assassins sets out for the martial
+                arts world, where he encounters a bosom friend and becomes
+                entangled in a conspiracy.
+              </p>
+              <button class="movie-list-item-button">Watch</button>
+            </div>
+          </div>
+          <div class="movie-list">
+            <div class="movie-list-item">
+              <img
+                class="boxart-image boxart-image-in-padded-container movie-list-item-img"
+                src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABVtawEeKyeenDb54a9gxKBBFzbwwbNQcHZrZxL7uEI9BE2_lySUKBZ0Pz6-bLoBBTVlIXrtCa37LT99bEEI6ZiEYBGVdBtYWRLQ.webp?r=14d"
+                alt=""
+              />
+              <span class="movie-list-item-title">The Untamed</span>
+              <p class="movie-list-item-desc">
+                In a magical world of inter-clan rivality, two soulmates face
+                treacherous schemes and uncover a dark mystery linked to a
+                tragic event in the past.
+              </p>
+              <button class="movie-list-item-button">Watch</button>
+            </div>
+          </div>
+          <div class="movie-list">
+            <div class="movie-list-item">
+              <img
+                class="boxart-image boxart-image-in-padded-container movie-list-item-img"
+                src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABeeWhpRs_DQ63ZjrGdzmid_c-TipsBmAYsK7fnzczED1LIIJdBTb7gW4SLWH8A9pVRUa1k7BNKT2m2eAo_xcA2YmLLnsChu4p2Y.webp?r=372"
+                alt=""
+              />
+              <span class="movie-list-item-title">Love Between</span>
+              <p class="movie-list-item-desc">
+                When a low-ranked fairy accidentally resurrects a powerful
+                demon, their fates become cosmically entangled as the world is
+                thrown into turmoil.
+              </p>
+              <button class="movie-list-item-button">Watch</button>
+            </div>
+          </div>
+          <div class="movie-list">
+            <div class="movie-list-item">
+              <img
+                class="boxart-image boxart-image-in-padded-container movie-list-item-img"
+                src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABWt6tIXNridbNjlH1lUTwJxFDVkTWRQMc33ssSeTd8CdzXyDf8ujsS2dzrEtxqQVPvrsEqxUYzkopcDBxr_2ytHHuSdXIGFitwA.webp?r=76e"
+                alt=""
+              />
+              <span class="movie-list-item-title">Ashes of Love</span>
+              <p class="movie-list-item-desc">
+                Hidden away by her mother, the Floral Goddess, the naive Jinmi
+                is drawn to Xufeng, the Heavently Emperor`s son. Yet forces
+                conspire against them.
+              </p>
+              <button class="movie-list-item-button">Watch</button>
+            </div>
+          </div>
+          <div class="movie-list">
+            <div class="movie-list-item">
+              <img
+                class="boxart-image boxart-image-in-padded-container movie-list-item-img"
+                src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABQJ3Ezsb6bqvibrun94SkilLPsqrh5dIHHlD-xh2r9qMJSDnEGNiOAWmVzsw-vVi60yphj3TIMF94AsjJ0RP1sbjlUEYlr0Ax3o.webp?r=318"
+                alt=""
+              />
+              <span class="movie-list-item-title">Legend of Exorcism</span>
+              <p class="movie-list-item-desc">
+                After leaving Yaojin Palace, Kong Hongjun arrives in Chang`an to
+                battle demons and forms a bond with exorcism squad chief Li
+                Jinglong.
+              </p>
+              <button class="movie-list-item-button">Watch</button>
+            </div>
+          </div>
+          <div class="movie-list">
+            <div class="movie-list-item">
+              <img
+                class="boxart-image boxart-image-in-padded-container movie-list-item-img"
+                src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABcx_0e3107jMd7-3t53slF0F35-Cy6SiPkL_oM3I81DpCoIoWkwxuWfpTcWUTjJNLKcoU7Cc7sXmGPu2Qdakql5u50TXsMJ7VfsxjpSFea0dHBnuNbc98d5-chsy4ZHHGQ1m.jpg?r=0cf"
+                alt=""
+              />
+              <span class="movie-list-item-title">Prince of Tennis</span>
+              <p class="movie-list-item-desc">
+                Atennis whiz beats the odds to excel on the court while juggling
+                school and inspiring teammates.Based on the hit manga series by
+                Takeshi Konomi.
+              </p>
+              <button class="movie-list-item-button">Watch</button>
+            </div>
+          </div>
+          <i class="fa-solid fa-angle-right arrow"></i>
+        </div>
+      </div>
     </div>
   </body>
 </html>
