change the page content

--- a/index.html
+++ b/index.html
@@ -154,90 +154,90 @@
           </div>
         </div>
         <div class="movie-list-container">
-          <h1 class="movie-list-title">Chinese Movies & TV</h1>
+          <h1 class="movie-list-title">K-Dramas</h1>
           <div class="movie-list-wrapper">
             <div class="movie-list">
               <div class="movie-list-item">
                 <img
                   class="boxart-image boxart-image-in-padded-container movie-list-item-img"
-                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABZdfo7i86UdhpYCVPKXqbAbcdGzAJL7BQIw4InDL_6N42Vp6fKVgDbTXLQ4L5Xr6lBo7M1tVVZY5S_FxYQII3HcHlLs4dweYhzo.webp?r=ea5"
+                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABQ3pxbSEzgYCiU21fpMqw_lV9zaZT9HlHrtaAFvmjBWXvd6lGHYy52y3y_c7qEREZYuGh19YXYS6Jk0yRhh0aK7U7VFJ2zKE_Y_ooJBS-X3Wypwb_2HuhyzhO2iirtrCelK5.jpg?r=44a"
                   alt=""
                 />
-                <span class="movie-list-item-title">Word of Honor</span>
+                <span class="movie-list-item-title">Tomorrow</span>
                 <p class="movie-list-item-desc">
-                  A didillusioned leader of assassins sets out for the martial
-                  arts world, where he encounters a bosom friend and becomes
-                  entangled in a conspiracy.
+                  Made half-human and half-spirit by accident, a young man is
+                  employed by a company of grim reapers in the underworld to
+                  carry out special missions.
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
                   class="boxart-image boxart-image-in-padded-container movie-list-item-img"
-                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABVtawEeKyeenDb54a9gxKBBFzbwwbNQcHZrZxL7uEI9BE2_lySUKBZ0Pz6-bLoBBTVlIXrtCa37LT99bEEI6ZiEYBGVdBtYWRLQ.webp?r=14d"
+                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABed-9wEYANJzgpdmduzr4iEObBtbw-O4NKoXYdE0trVX8k5NN9NmSDjrtUqHtMIR2nhfxq_fRnsEnvf1b7vgZl6TJIwIIhqHE3NszWfoZDdo-uT7P0-Qt0fbvAQEOzY2ga6p.jpg?r=c47"
                   alt=""
                 />
-                <span class="movie-list-item-title">The Untamed</span>
+                <span class="movie-list-item-title">Squid Game</span>
                 <p class="movie-list-item-desc">
-                  In a magical world of inter-clan rivality, two soulmates face
-                  treacherous schemes and uncover a dark mystery linked to a
-                  tragic event in the past.
+                  HUndreds of cash-strapped players accept a strange invitation
+                  to compete in children`s games.Inside , a tempting prize
+                  awaits - with deadly high stakes.
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
                   class="boxart-image boxart-image-in-padded-container movie-list-item-img"
-                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABeeWhpRs_DQ63ZjrGdzmid_c-TipsBmAYsK7fnzczED1LIIJdBTb7gW4SLWH8A9pVRUa1k7BNKT2m2eAo_xcA2YmLLnsChu4p2Y.webp?r=372"
+                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABQAWyMIg0EiF2WUAbXB4ESfllTEmHd8aGhpQQdx9Qvb5_Bz0278EjrTC_xIhq0MA013e2qbQLuSAAmjxpKE5e3bUrujldE1pWSb7WM4aUzR5wdIePjUjm7oux46YqQayh18q.jpg?r=a70"
                   alt=""
                 />
-                <span class="movie-list-item-title">Love Between</span>
+                <span class="movie-list-item-title">My Holo Love</span>
                 <p class="movie-list-item-desc">
-                  When a low-ranked fairy accidentally resurrects a powerful
-                  demon, their fates become cosmically entangled as the world is
-                  thrown into turmoil.
+                  Unexpected love finds a lonely woman when she forms a
+                  connection with a humanlike hologram who looks exactly like
+                  his prickly creator.
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
                   class="boxart-image boxart-image-in-padded-container movie-list-item-img"
-                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABWt6tIXNridbNjlH1lUTwJxFDVkTWRQMc33ssSeTd8CdzXyDf8ujsS2dzrEtxqQVPvrsEqxUYzkopcDBxr_2ytHHuSdXIGFitwA.webp?r=76e"
+                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABY_8lvmzSnJOUg_dio9ZII7eEljz3j7mH1uqK9bFftLqYPeiRNItezd1EUAl1seG1e4uqVVpLGS5WxNM0M9j6WsDBqmnPNsFuhNVoZq93lR6k7g9qDMxNkCcM0aSlTQLPgtQ.jpg?r=2d6"
                   alt=""
                 />
-                <span class="movie-list-item-title">Ashes of Love</span>
+                <span class="movie-list-item-title">Abyss</span>
                 <p class="movie-list-item-desc">
-                  Hidden away by her mother, the Floral Goddess, the naive Jinmi
-                  is drawn to Xufeng, the Heavently Emperor`s son. Yet forces
-                  conspire against them.
+                  After meeting an untimely demise in separate incidents, Cha
+                  Min and Go Se-yeon discover they`re come back to life in new
+                  boddies they don`t recongnize.
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
                   class="boxart-image boxart-image-in-padded-container movie-list-item-img"
-                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABQJ3Ezsb6bqvibrun94SkilLPsqrh5dIHHlD-xh2r9qMJSDnEGNiOAWmVzsw-vVi60yphj3TIMF94AsjJ0RP1sbjlUEYlr0Ax3o.webp?r=318"
+                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABTQjGKsYRzr9qmpZPy6lDHkpxZJCRp6sKZkWwu6LB3xzl2aiQO2ELEcKEc-l-bbVX9E0pJpWIzHnUaDXdnNqaS8PF4Ykch7fPY51p1BwQJtjaH5DQUq3kxIzq0UWzIQcMcV8.jpg?r=1d9"
                   alt=""
                 />
-                <span class="movie-list-item-title">Legend of Exorcism</span>
+                <span class="movie-list-item-title">Vincenzo</span>
                 <p class="movie-list-item-desc">
-                  After leaving Yaojin Palace, Kong Hongjun arrives in Chang`an
-                  to battle demons and forms a bond with exorcism squad chief Li
-                  Jinglong.
+                  During a visit to his motherland , a KOrean-Italian mafia
+                  lawyer gives an unrivaled conglomerate a taste of its own
+                  medicine with a side of justice.
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
                   class="boxart-image boxart-image-in-padded-container movie-list-item-img"
-                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABcx_0e3107jMd7-3t53slF0F35-Cy6SiPkL_oM3I81DpCoIoWkwxuWfpTcWUTjJNLKcoU7Cc7sXmGPu2Qdakql5u50TXsMJ7VfsxjpSFea0dHBnuNbc98d5-chsy4ZHHGQ1m.jpg?r=0cf"
+                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABQcc_vWFNtF4HhlV4_ZsHRrBVgRLZvRY7TlGIzumnftbUfociUTFVcQkD64AjuWP8jJCI-rUFWWBFW9MTEYh3mdaIN4msE3I5PmV8dSuxY5ji6CsXnzhsqrP9awcJChAgru7.jpg?r=c9c"
                   alt=""
                 />
-                <span class="movie-list-item-title">Prince of Tennis</span>
+                <span class="movie-list-item-title">Little Women</span>
                 <p class="movie-list-item-desc">
-                  Atennis whiz beats the odds to excel on the court while
-                  juggling school and inspiring teammates.Based on the hit manga
-                  series by Takeshi Konomi.
+                  Three sisters, who only have each other and never enough
+                  money, get entangled in a conspiracy involving the rich and
+                  powerful.
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
@@ -246,90 +246,90 @@
           </div>
         </div>
         <div class="movie-list-container">
-          <h1 class="movie-list-title">Chinese Movies & TV</h1>
+          <h1 class="movie-list-title">TV Action & Adventure</h1>
           <div class="movie-list-wrapper">
             <div class="movie-list">
               <div class="movie-list-item">
                 <img
                   class="boxart-image boxart-image-in-padded-container movie-list-item-img"
-                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABZdfo7i86UdhpYCVPKXqbAbcdGzAJL7BQIw4InDL_6N42Vp6fKVgDbTXLQ4L5Xr6lBo7M1tVVZY5S_FxYQII3HcHlLs4dweYhzo.webp?r=ea5"
+                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABb0G3Mzc3Gdf_6EgTZrRCWDozX5XSuYUW-yZ8AVAA4xO_j4JRW43BR-GoXjrS0uHiFm3EvobaQH44YE7gmf3ugocTl2lPJCREE4.webp?r=b16"
                   alt=""
                 />
-                <span class="movie-list-item-title">Word of Honor</span>
+                <span class="movie-list-item-title">Arrow</span>
                 <p class="movie-list-item-desc">
-                  A didillusioned leader of assassins sets out for the martial
-                  arts world, where he encounters a bosom friend and becomes
-                  entangled in a conspiracy.
+                  Based on DC Comics`Green Arrow , an affuent playboy become a
+                  vengeful superhero , saving the city from villains with just a
+                  bow and arrows.
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
                   class="boxart-image boxart-image-in-padded-container movie-list-item-img"
-                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABVtawEeKyeenDb54a9gxKBBFzbwwbNQcHZrZxL7uEI9BE2_lySUKBZ0Pz6-bLoBBTVlIXrtCa37LT99bEEI6ZiEYBGVdBtYWRLQ.webp?r=14d"
+                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABZInZJAdW64R2mL49PSM7NOSDsxJhNGqvOAuDIk62La792X76xzENgidpl9VvRij4N7SdRT5Cw5fRqmFuCAWorMPw-thD6CQMElPtBYER7urU0PEvz7Ym7zXZQ0KloNbTsUu.jpg?r=a9e"
                   alt=""
                 />
-                <span class="movie-list-item-title">The Untamed</span>
+                <span class="movie-list-item-title">Titans</span>
                 <p class="movie-list-item-desc">
-                  In a magical world of inter-clan rivality, two soulmates face
-                  treacherous schemes and uncover a dark mystery linked to a
-                  tragic event in the past.
+                  After striking out on his own , Batman`s former partener Dick
+                  Grayson encounters a number of troubled young heroes in
+                  desperate need of a mentor.
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
                   class="boxart-image boxart-image-in-padded-container movie-list-item-img"
-                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABeeWhpRs_DQ63ZjrGdzmid_c-TipsBmAYsK7fnzczED1LIIJdBTb7gW4SLWH8A9pVRUa1k7BNKT2m2eAo_xcA2YmLLnsChu4p2Y.webp?r=372"
+                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABbQ8gPezVdbpsEI9BlruElBuKllreq3RxMQDkW_rstDdPVYE3LrE-SDm7C_k1InIG5MpKPyMnF4tfx2RLxyYNbNUOWYxhWJZmQ7_Lops9kbo8qFpAACg3Tg1a3h3ZiLy-kYm.jpg?r=2d4"
                   alt=""
                 />
-                <span class="movie-list-item-title">Love Between</span>
+                <span class="movie-list-item-title">Van Helsing</span>
                 <p class="movie-list-item-desc">
-                  When a low-ranked fairy accidentally resurrects a powerful
-                  demon, their fates become cosmically entangled as the world is
-                  thrown into turmoil.
+                  In an apocalyptic future ruled by vampires,Vanessa Van Helsing
+                  awakens from a coma to discover that she`s the living antidote
+                  to the bloodsuckers wiping out humanity.Acclaimed fimmaker
+                  Neil LaBute created this adaptation of the comic series.
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
                   class="boxart-image boxart-image-in-padded-container movie-list-item-img"
-                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABWt6tIXNridbNjlH1lUTwJxFDVkTWRQMc33ssSeTd8CdzXyDf8ujsS2dzrEtxqQVPvrsEqxUYzkopcDBxr_2ytHHuSdXIGFitwA.webp?r=76e"
+                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABRtYTeRqjgFcDa1Wp2ZPI0FdAG74R1PfEyWGOoux3Lnfu9lWDAZvBtPXWVOsChxP0PjWY5ziEfKMUIqgsFoL4tUsD4iVK6Vbpqef8Lbhggg5gurUdAjcccuCzFB2xJRrgNoQ.jpg?r=084"
                   alt=""
                 />
-                <span class="movie-list-item-title">Ashes of Love</span>
+                <span class="movie-list-item-title">Lupin</span>
                 <p class="movie-list-item-desc">
-                  Hidden away by her mother, the Floral Goddess, the naive Jinmi
-                  is drawn to Xufeng, the Heavently Emperor`s son. Yet forces
-                  conspire against them.
+                  Inspired by the adventures of Arsene Lupin ,gentleman thief
+                  Assane Diop sets out to avenge his father for an injustice
+                  inflicted by a wealthy family.
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
                   class="boxart-image boxart-image-in-padded-container movie-list-item-img"
-                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABQJ3Ezsb6bqvibrun94SkilLPsqrh5dIHHlD-xh2r9qMJSDnEGNiOAWmVzsw-vVi60yphj3TIMF94AsjJ0RP1sbjlUEYlr0Ax3o.webp?r=318"
+                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABQpZ8NEJkvNY4EuHaS8c40Vq96CMQcdzAI62eZ7S7CIwbav82VPFHbbsQb0FD0pFfhIRM4Vv1GjhqfJ5lwShit4yfVubXvwYSsJKWVvO7lsmMzbfiZIl0WfYP4VWJFEGsvuf.jpg?r=3c8"
                   alt=""
                 />
-                <span class="movie-list-item-title">Legend of Exorcism</span>
+                <span class="movie-list-item-title">Cursed</span>
                 <p class="movie-list-item-desc">
-                  After leaving Yaojin Palace, Kong Hongjun arrives in Chang`an
-                  to battle demons and forms a bond with exorcism squad chief Li
-                  Jinglong.
+                  Armed with mysterios powers and a legendary sword, young rebel
+                  Nimue joins forces with charming mercenary Arthur on a mission
+                  to save her people.
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
                   class="boxart-image boxart-image-in-padded-container movie-list-item-img"
-                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABcx_0e3107jMd7-3t53slF0F35-Cy6SiPkL_oM3I81DpCoIoWkwxuWfpTcWUTjJNLKcoU7Cc7sXmGPu2Qdakql5u50TXsMJ7VfsxjpSFea0dHBnuNbc98d5-chsy4ZHHGQ1m.jpg?r=0cf"
+                  src="https://occ-0-3033-768.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABTBULERiv7XS-9JjumGJWZYKbyjnFDUCQAYlzL82ZT6HAT35de3xrtlsfLF-yMthAQtMi8PrXGuV2cTtB8ruMz0nHY_yglKp_42UPPAdzmIryHhldCS1F9XoBSKeZ1wkIasZ.jpg?r=9b3"
                   alt=""
                 />
-                <span class="movie-list-item-title">Prince of Tennis</span>
+                <span class="movie-list-item-title">Narcos</span>
                 <p class="movie-list-item-desc">
-                  Atennis whiz beats the odds to excel on the court while
-                  juggling school and inspiring teammates.Based on the hit manga
-                  series by Takeshi Konomi.
+                  The true story of Colombia`s infamously violent and powerful
+                  drug cartels fuels this gritty gangster drama series.
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
